[gd_scene load_steps=2 format=3 uid="uid://h0v0u8a6uk0q"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/gui/docks/cyclops_console/keymap_editor/keymap_keypress_editor.gd" id="1_8yg65"]

[node name="keymap_keypress_editor" type="PanelContainer"]
size_flags_horizontal = 3
script = ExtResource("1_8yg65")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="bn_keycode" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="check_shift" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Shift"

[node name="check_ctrl" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ctrl"

[node name="check_alt" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Alt"

[connection signal="pressed" from="HBoxContainer/bn_keycode" to="." method="_on_bn_keycode_pressed"]
[connection signal="toggled" from="HBoxContainer/check_shift" to="." method="_on_check_shift_toggled"]
[connection signal="toggled" from="HBoxContainer/check_ctrl" to="." method="_on_check_ctrl_toggled"]
[connection signal="toggled" from="HBoxContainer/check_alt" to="." method="_on_check_alt_toggled"]
